# dcldev-llmtool

./: .env.sample  .gitignore  404.html  Makefile  README.md  config.toml  index.html  mkdocs.yml  pyproject.toml
.github/actions/: action.yml
.github/workflows/: build-package.yaml  deploy-docs.yaml  static-checks.yaml
config/: crew_agents.json
data/: template_keywords.csv  template_sections.json  template_tables.json
data/assessments/: a-assessment-template.docx  dcl-intake-form2.docx
design/: index.html
development/: index.html
development/datafiles/: index.html
development/documents/: index.html
development/environment/: index.html
docs/: index.md
docs/commands/: index.md
docs/design/: index.md
docs/development/: datafiles.md  documents.md  environment.md  index.md
docs/workflow/: index.md
notebooks/: test_docx_tables.py  test_docx_tables_defn.py  test_docx_text.py  test_docx_zip.py  test_embed.py  test_faker.py  test_intake.py  test_lancedb.py  test_plot.py
scripts/: setup.sh
scripts/ollama/: create-llama2-model.sh  create-llama3-model.sh  create-mistral-model.sh  create-phi3-model.sh  create-wizardlm2-model.sh  llama2-modelfile  mistral-modelfile  phi3-modelfile  wizardlm2-modelfile
search/: search_index.json
source/llmtool/: __init__.py  __metadata__.py  main_cli.py  settings.py
source/llmtool/data/: database.py  enums.py  models.py  query.py
source/llmtool/genai/: agents.py  crew.py  crew_agents.py  crew_state.py  crew_tasks.py  crew_tools.py  generate.py
source/llmtool/genai/crew/: crew.py  crew_agents.py  crew_state.py  crew_tasks.py  crew_tools.py
source/llmtool/genai/crew/tools/: file_tools.py  query_tools.py
source/llmtool/gui/: gui_cli.py
source/llmtool/tools/: tools_cli.py  tools_embed.py  tools_load.py  tools_parse.py  tools_search.py
tests/: test_version.py
workflow/: index.html
workflow/cli/: index.html
